--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
         let yardsChart, tdsChart;
 
         const gameSchedule = [
-            { week: 1, title: 'Week 1 vs MIN', opponent: 'Minnesota Vikings', link: 'https://www.youtube.com/watch?v=example1' },
-            { week: 2, title: 'Week 2 at DET', opponent: 'Detroit Lions', link: 'https://www.youtube.com/watch?v=example2' },
-            { week: 3, title: 'Week 3 vs DAL', opponent: 'Dallas Cowboys', link: 'https://www.youtube.com/watch?v=example3' },
-            { week: 4, title: 'Week 4 at LV', opponent: 'Las Vegas Raiders', link: 'https://www.youtube.com/watch?v=example4' },
+            { week: 1, title: 'Week 1 vs MIN', opponent: 'Minnesota Vikings', link: 'https://www.youtube.com/watch?v=DmA08lBOa68' },
+            { week: 2, title: 'Week 2 at DET', opponent: 'Detroit Lions', link: 'https://www.youtube.com/watch?v=DmA08lBOa68' },
+            { week: 3, title: 'Week 3 vs DAL', opponent: 'Dallas Cowboys', link: 'https://www.youtube.com/watch?v=SAN1qBEhW8o' },
+            { week: 4, title: 'Week 4 at LV', opponent: 'Las Vegas Raiders', link: 'https://www.youtube.com/watch?v=GBX1Hl-CcGU' },
             { week: 5, title: 'Week 5 - BYE', opponent: 'BYE WEEK', link: '#' },
             { week: 6, title: 'Week 6 at WAS', opponent: 'Washington Commanders', link: '#' },
             { week: 7, title: 'Week 7 vs NO', opponent: 'New Orleans Saints', link: '#' },
@@ -251,9 +251,9 @@
             { week: 11, title: 'Week 11 at MIN', opponent: 'Minnesota Vikings', link: '#' },
             { week: 12, title: 'Week 12 vs PIT', opponent: 'Pittsburgh Steelers', link: '#' },
             { week: 13, title: 'Week 13 at PHI', opponent: 'Philadelphia Eagles', link: '#' },
-            { week: 14, title: 'Week 14 at GB', opponent: 'Green Bay Packers', link: '#' },
+            { week: 14, title: 'Week 14 at GB', opponent: 'Green Bay Packers', link: 'https://www.youtube.com/watch?v=DmA08lBOa68' },
             { week: 15, title: 'Week 15 vs CLE', opponent: 'Cleveland Browns', link: '#' },
-            { week: 16, title: 'Week 16 vs GB', opponent: 'Green Bay Packers', link: '#' },
+            { week: 16, title: 'Week 16 vs GB', opponent: 'Green Bay Packers', link: 'https://www.youtube.com/watch?v=DmA08lBOa68' },
             { week: 17, title: 'Week 17 at SF', opponent: 'San Francisco 49ers', link: '#' },
             { week: 18, title: 'Week 18 vs DET', opponent: 'Detroit Lions', link: '#' },
         ];
@@ -553,4 +553,5 @@
 
 </body>
 </html>
+
 
