--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                     <p class="goal-subtitle">Goal: 4,000 yards</p>
                 </div>
                 <div class="current-stat">
-                    <h3>1,179</h3>
+                    <h3>1,351</h3>
                     <p>current</p>
                 </div>
             </div>
@@ -691,18 +691,18 @@
                 </div>
 
                 <!-- Week 7 -->
-                <div class="game-card upcoming">
+                <div class="game-card played">
                     <div class="week-label">Week 7</div>
                     <div class="game-info">
                         <h3>vs New Orleans Saints</h3>
-                        <p>Soldier Field</p>
+                        <p>W 26-14</p>
                     </div>
                     <div class="game-time">
                         <p>Sunday, 12:00 PM</p>
                         <span>Oct 20</span>
                     </div>
                     <div class="game-link">
-                        <a href="https://www.espn.com/nfl/game/_/gameId/401671745" target="_blank" class="preview">Preview</a>
+                       <a href="https://www.youtube.com/watch?v=IA857Yj2O20" target="_blank">Highlights</a>
                     </div>
                 </div>
 
@@ -958,3 +958,4 @@
     </script>
 </body>
 </html>
+
